# flopper

./: .gitignore  Cargo.toml  LICENSE  Readme.md  example.env
examples/: usual.rs  usual_macro.rs
examples/usual/: .env  Cargo.toml
examples/usual/src/: main.rs
src/: error.rs  flopper.rs  lib.rs  macros.rs  result.rs
src/flopper/: data_set.rs  gen_type.rs  info.rs  model.rs  params.rs  query.rs  status.rs  work.rs
tests/: fetch.rs
