[package]
name = "flopper"
version = "0.0.1"
edition = "2021"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
readme = "Readme.md"
description = "unofficial api wrapper for fusionbrain.ai"
categories = ["api-bindings"]
keywords = [
    "api",
    "image",
    "image-generation",
    "image-generation-api",
    "fusionbrain",
    "kandinsky",
]
license = "MIT"
repository = "https://github.com/TOwInOK/flopper"

[dependencies]
miniserde = "0.1.40"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
thiserror = "1.0.64"
tracing = "0.1.40"
tokio = { version = "1.40.0" }

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["full"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
anyhow = "1.0.89"
base64 = "0.22.1"

[[example]]
name = "usual"
bench = false
test = false
doc = false

[[example]]
name = "usual_macro"
bench = false
test = false
doc = false
